Code issues cleanup Disabled fileServer multithreading

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /src/pboBank/pboBank/Debug
+/src/pboBank/pboBank/x64/Debug/pboBank.tlog/CL.command.1.tlog
+/src/pboBank/pboBank/x64
+/src/pboBank/x64/Release
+/src/pboBank/pboBank.sdf
+/src/pboBank/pboBank.VC.opendb
