--- a/src/pboBank/pboBank_LinuxBuild/pboBank_LinuxBuild.vcxproj
+++ b/src/pboBank/pboBank_LinuxBuild/pboBank_LinuxBuild.vcxproj
@@ -62,6 +62,7 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClInclude Include="..\pboBank\changeSet.h" />
+    <ClInclude Include="..\pboBank\cluster.h" />
     <ClInclude Include="..\pboBank\compressionCache.h" />
     <ClInclude Include="..\pboBank\database.h" />
     <ClInclude Include="..\pboBank\fileManager.h" />
@@ -71,6 +72,7 @@
     <ClInclude Include="..\pboBank\modManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\pboBank\cluster.cpp" />
     <ClCompile Include="..\pboBank\compressionCache.cpp" />
     <ClCompile Include="..\pboBank\database.cpp" />
     <ClCompile Include="..\pboBank\fileManager.cpp" />
